// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayerControl is rendered 1`] = `
<Fragment>
  <EuiPanel
    className="mapWidgetControl mapWidgetControl-hasShadow"
    grow={false}
    paddingSize="none"
  >
    <EuiFlexItem
      className="mapWidgetControl__headerFlexItem"
      grow={false}
    >
      <EuiFlexGroup
        alignItems="center"
        gutterSize="none"
        justifyContent="spaceBetween"
        responsive={false}
      >
        <EuiFlexItem>
          <EuiTitle
            className="mapWidgetControl__header"
            size="xxxs"
          >
            <h2>
              <MemoizedFormattedMessage
                defaultMessage="Layers"
                id="xpack.maps.layerControl.layersTitle"
              />
            </h2>
          </EuiTitle>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiToolTip
            content="Hide all layers"
            delay="long"
            display="inlineBlock"
            position="top"
          >
            <EuiButtonIcon
              aria-label="Hide all layers"
              color="text"
              iconType="eyeClosed"
              onClick={[Function]}
            />
          </EuiToolTip>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiToolTip
            content="Show all layers"
            delay="long"
            display="inlineBlock"
            position="top"
          >
            <EuiButtonIcon
              aria-label="Show all layers"
              color="text"
              iconType="eye"
              onClick={[Function]}
            />
          </EuiToolTip>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiToolTip
            content="Collapse layers panel"
            delay="long"
            display="inlineBlock"
            position="top"
          >
            <EuiButtonIcon
              aria-label="Collapse layers panel"
              className="mapLayerControl__closeLayerTOCButton"
              color="text"
              data-test-subj="mapToggleLegendButton"
              iconType="menuRight"
              onClick={[Function]}
            />
          </EuiToolTip>
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiFlexItem>
    <EuiFlexItem
      className="mapLayerControl"
    >
      <LayerTOC />
    </EuiFlexItem>
  </EuiPanel>
  <EuiSpacer
    size="s"
  />
  <EuiButton
    className="mapLayerControl__addLayerButton"
    data-test-subj="addLayerButton"
    fill={true}
    fullWidth={true}
    isDisabled={false}
    onClick={[Function]}
  >
    <MemoizedFormattedMessage
      defaultMessage="Add layer"
      id="xpack.maps.layerControl.addLayerButtonLabel"
    />
  </EuiButton>
</Fragment>
`;

exports[`LayerControl isLayerTOCOpen Should render expand button 1`] = `
<EuiToolTip
  content="Expand layers panel"
  delay="long"
  display="inlineBlock"
  position="left"
>
  <ExpandButton
    hasErrorsOrWarnings={false}
    isLoading={false}
    onClick={[Function]}
  />
</EuiToolTip>
`;

exports[`LayerControl isLayerTOCOpen Should render expand button with error icon when layer has error 1`] = `
<EuiToolTip
  content="Expand layers panel"
  delay="long"
  display="inlineBlock"
  position="left"
>
  <ExpandButton
    hasErrorsOrWarnings={true}
    isLoading={false}
    onClick={[Function]}
  />
</EuiToolTip>
`;

exports[`LayerControl isLayerTOCOpen Should render expand button with loading icon when layer is loading 1`] = `
<EuiToolTip
  content="Expand layers panel"
  delay="long"
  display="inlineBlock"
  position="left"
>
  <ExpandButton
    hasErrorsOrWarnings={false}
    isLoading={true}
    onClick={[Function]}
  />
</EuiToolTip>
`;

exports[`LayerControl isReadOnly 1`] = `
<Fragment>
  <EuiPanel
    className="mapWidgetControl mapWidgetControl-hasShadow"
    grow={false}
    paddingSize="none"
  >
    <EuiFlexItem
      className="mapWidgetControl__headerFlexItem"
      grow={false}
    >
      <EuiFlexGroup
        alignItems="center"
        gutterSize="none"
        justifyContent="spaceBetween"
        responsive={false}
      >
        <EuiFlexItem>
          <EuiTitle
            className="mapWidgetControl__header"
            size="xxxs"
          >
            <h2>
              <MemoizedFormattedMessage
                defaultMessage="Layers"
                id="xpack.maps.layerControl.layersTitle"
              />
            </h2>
          </EuiTitle>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiToolTip
            content="Hide all layers"
            delay="long"
            display="inlineBlock"
            position="top"
          >
            <EuiButtonIcon
              aria-label="Hide all layers"
              color="text"
              iconType="eyeClosed"
              onClick={[Function]}
            />
          </EuiToolTip>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiToolTip
            content="Show all layers"
            delay="long"
            display="inlineBlock"
            position="top"
          >
            <EuiButtonIcon
              aria-label="Show all layers"
              color="text"
              iconType="eye"
              onClick={[Function]}
            />
          </EuiToolTip>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiToolTip
            content="Collapse layers panel"
            delay="long"
            display="inlineBlock"
            position="top"
          >
            <EuiButtonIcon
              aria-label="Collapse layers panel"
              className="mapLayerControl__closeLayerTOCButton"
              color="text"
              data-test-subj="mapToggleLegendButton"
              iconType="menuRight"
              onClick={[Function]}
            />
          </EuiToolTip>
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiFlexItem>
    <EuiFlexItem
      className="mapLayerControl"
    >
      <LayerTOC />
    </EuiFlexItem>
  </EuiPanel>
</Fragment>
`;

exports[`LayerControl should disable buttons when flyout is open 1`] = `
<Fragment>
  <EuiPanel
    className="mapWidgetControl mapWidgetControl-hasShadow"
    grow={false}
    paddingSize="none"
  >
    <EuiFlexItem
      className="mapWidgetControl__headerFlexItem"
      grow={false}
    >
      <EuiFlexGroup
        alignItems="center"
        gutterSize="none"
        justifyContent="spaceBetween"
        responsive={false}
      >
        <EuiFlexItem>
          <EuiTitle
            className="mapWidgetControl__header"
            size="xxxs"
          >
            <h2>
              <MemoizedFormattedMessage
                defaultMessage="Layers"
                id="xpack.maps.layerControl.layersTitle"
              />
            </h2>
          </EuiTitle>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiToolTip
            content="Hide all layers"
            delay="long"
            display="inlineBlock"
            position="top"
          >
            <EuiButtonIcon
              aria-label="Hide all layers"
              color="text"
              iconType="eyeClosed"
              onClick={[Function]}
            />
          </EuiToolTip>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiToolTip
            content="Show all layers"
            delay="long"
            display="inlineBlock"
            position="top"
          >
            <EuiButtonIcon
              aria-label="Show all layers"
              color="text"
              iconType="eye"
              onClick={[Function]}
            />
          </EuiToolTip>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiToolTip
            content="Collapse layers panel"
            delay="long"
            display="inlineBlock"
            position="top"
          >
            <EuiButtonIcon
              aria-label="Collapse layers panel"
              className="mapLayerControl__closeLayerTOCButton"
              color="text"
              data-test-subj="mapToggleLegendButton"
              iconType="menuRight"
              onClick={[Function]}
            />
          </EuiToolTip>
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiFlexItem>
    <EuiFlexItem
      className="mapLayerControl"
    >
      <LayerTOC />
    </EuiFlexItem>
  </EuiPanel>
  <EuiSpacer
    size="s"
  />
  <EuiButton
    className="mapLayerControl__addLayerButton"
    data-test-subj="addLayerButton"
    fill={true}
    fullWidth={true}
    isDisabled={true}
    onClick={[Function]}
  >
    <MemoizedFormattedMessage
      defaultMessage="Add layer"
      id="xpack.maps.layerControl.addLayerButtonLabel"
    />
  </EuiButton>
</Fragment>
`;
